.kubernetes/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kubernetes-ingress-ip
    networking.gke.io/managed-certificates: laravel
spec:
  rules:
  - host: laravel.gke.any-key.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: laravel
            port:
              number: 80
